--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
   <div class="col-md-12">
+    <%= link_to("清空购物车", clean_carts_path, method: :delete, class: "pull-right btn btn-md btn-primary" , data: { confirm: "确定清空购物车吗？"})%>
+
     <h2>购物车</h2>
 
     <table class="table table-bordered">
